...
            .environmentObject(priestStore)
#if !os(macOS)
            .toolbar(shouldInlinePrayerToolbar ? .hidden : .visible, for: .navigationBar)
            .toolbar {
                NavigationLink(destination: SettingsMenuView(priestStore: priestStore, availablePrayers: $prayerStore.prayers, showEditor: $showEditor, showOsoby: $showOsoby, showCzymJest: $showCzymJest, showJakSie: $showJakSie, menuTargetCategory: $menuTargetCategory),
                               isActive: $showSettings) {
                    Image(systemName: "gear")
                }
            }
#endif
            .onAppear {
                let now = CFAbsoluteTimeGetCurrent()
                print("HomeView onAppear at \(String(format: "%.3f", now))")
...
